# VariableRenamer

./: CMakeLists.txt  README  main.cpp  run.bat  run.rsp
example/: base.h  derived.cpp  derived.h  noinclude.cpp  test.cpp  test.h
